# black-hole

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/elements/black_hole/: black_hole.cpp  black_hole.h
src/elements/ray/: Ray.cpp  ray.h
src/engine/: engine.cpp  engine.h
src/geodesic/: geodesic.cpp  geodesic.h
